objects/vlocity_ins__PolicyClaimRelationship__c.object
<CustomObject>
    <description>DEPRECATED. Master-detail child object of Policy (deprecated) and Claim.</description>
    <fields>
        <fullName>vlocity_ins__ClaimId__c</fullName>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipName>ClaimsPoliciesRel2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimStatus__c</fullName>
        <formula>TEXT(vlocity_ins__ClaimId__r.vlocity_ins__ClaimStatus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClaimStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PolicyId__c</fullName>
        <label>Policy</label>
        <referenceTo>vlocity_ins__Policy__c</referenceTo>
        <relationshipName>ClaimsPoliciesRel1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Policy Claim Relationship</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Claim Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>